fix: history grid alignement (#67)

--- a/pokinder-frontend/src/page/Pokedex/Pokedex.module.css
+++ b/pokinder-frontend/src/page/Pokedex/Pokedex.module.css
@@ -16,7 +16,7 @@
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, max-content));
+  grid-template-columns: repeat(auto-fill, minmax(180px, max-content));
   grid-gap: var(--spacing-L);
   justify-content: space-between;
 }
